--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                 <h3>Deadline</h3>
                                 <p class="font-semibold">21 March 2025</p>
                             </div>
-                            <button class="btn bg-blue-600 rounded-lg text-white">Completed</button>
+                            <button id="Inc-3" class="btn bg-blue-600 rounded-lg text-white">Completed</button>
                         </div>
                     </div>
 
@@ -129,7 +129,7 @@
                                 <h3>Deadline</h3>
                                 <p class="font-semibold">21 March 2025</p>
                             </div>
-                            <button class="btn bg-blue-600 rounded-lg text-white">Completed</button>
+                            <button id="Inc-4" class="btn bg-blue-600 rounded-lg text-white">Completed</button>
                         </div>
                     </div>
 
@@ -146,7 +146,7 @@
                                 <h3>Deadline</h3>
                                 <p class="font-semibold">21 March 2025</p>
                             </div>
-                            <button class="btn bg-blue-600 rounded-lg text-white">Completed</button>
+                            <button id="Inc-5" class="btn bg-blue-600 rounded-lg text-white">Completed</button>
                         </div>
                     </div>
 
@@ -163,7 +163,7 @@
                                 <h3>Deadline</h3>
                                 <p class="font-semibold">21 March 2025</p>
                             </div>
-                            <button class="btn bg-blue-600 rounded-lg text-white">Completed</button>
+                            <button id="Inc-6" class="btn bg-blue-600 rounded-lg text-white">Completed</button>
                         </div>
                     </div>
                 </div>
