--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
                             <div class="p-3 bg-white rounded-full"> 
                                 <img src="./assets/calender.png" alt="Board">
                             </div>
-                            <p class="text-xl font-medium">Wed,<br>Jul 28 2025</p>
+                            <div id="DateTime">
+
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -188,5 +190,6 @@
 
     <script src="./Scripts/main.js"></script>
     <script src="./Scripts/Delete.js"></script>
+    <script src="./Scripts/Time.js"></script>
 </body>
 </html>
