Dashed line added

--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@
                             <h4 class="font-semibold">ShopEase</h4>
                         </div>
                         <h1 id="taskA" class="font-bold text-xl">Fix Mobile Button Issue </h1>
-                        <div class="p-2 bg-white h-18 text-left rounded-lg ">
-                            <p class="truncate">Debug using Chrome <br>DevTools, check for overlapping elements, and ensure onClick works properly.</p>
+                        <div class="border-dashed border-b-2 border-slate-200">
+                            <div class="p-2 bg-white h-18 text-left rounded-lg mb-4 ">
+                                <p class="truncate">Debug using Chrome <br>DevTools, check for overlapping elements, and ensure onClick works properly.</p>
+                            </div>
                         </div>
                         <div class="flex flex-row justify-between items-center">
                             <div class="flex flex-col gap-1 text-left">
@@ -89,8 +91,10 @@
                             <h4 class="font-semibold">SwiftPay</h4>
                         </div>
                         <h1 id="taskB" class="font-bold text-xl">Add Dark Mode</h1>
-                        <div class="p-2 bg-white h-18 text-left rounded-lg ">
-                            <p class="truncate">Store the user's preference in<br>localStorage, update CSS variables dynamically, and apply a smooth transition effect.</p>
+                        <div class="border-dashed border-b-2 border-slate-200">
+                            <div class="p-2 bg-white h-18 text-left rounded-lg mb-4">
+                                <p class="truncate">Store the user's preference in<br>localStorage, update CSS variables dynamically, and apply a smooth transition effect.</p>
+                            </div>
                         </div>
                         <div class="flex flex-row justify-between items-center">
                             <div class="flex flex-col gap-1 text-left">
@@ -106,8 +110,10 @@
                             <h4 class="font-semibold">CloudSync</h4>
                         </div>
                         <h1 id="taskC" class="font-bold text-xl">Optimize  Home page</h1>
-                        <div class="p-2 bg-white h-18 text-left rounded-lg ">
-                            <p class="truncate">Debug using Chrome <br>DevTools, check for overlapping elements, and ensure onClick works properly.</p>
+                        <div class="border-dashed border-b-2 border-slate-200">
+                            <div class="p-2 bg-white h-18 text-left rounded-lg mb-4">
+                                <p class="truncate">Debug using Chrome <br>DevTools, check for overlapping elements, and ensure onClick works properly.</p>
+                            </div>
                         </div>
                         <div class="flex flex-row justify-between items-center">
                             <div class="flex flex-col gap-1 text-left">
@@ -123,8 +129,10 @@
                             <h4 class="font-semibold">Meta</h4>
                         </div>
                         <h1 id="taskD" class="font-bold text-xl">Add new emoji 🤲</h1>
-                        <div class="p-2 bg-white h-18 text-left rounded-lg ">
-                            <p class="truncate">Debug using Chrome <br>DevTools, check for overlapping elements, and ensure onClick works properly.</p>
+                        <div class="border-dashed border-b-2 border-slate-200">
+                            <div class="p-2 bg-white h-18 text-left rounded-lg mb-4">
+                                <p class="truncate">Debug using Chrome <br>DevTools, check for overlapping elements, and ensure onClick works properly.</p>
+                            </div>
                         </div>
                         <div class="flex flex-row justify-between items-center">
                             <div class="flex flex-col gap-1 text-left">
@@ -140,8 +148,10 @@
                             <h4 class="font-semibold">Google LLC</h4>
                         </div>
                         <h1 id="taskE" class="font-bold text-xl">Integrate OpenAI API</h1>
-                        <div class="p-2 bg-white h-18 text-left rounded-lg ">
-                            <p class="truncate">Debug using Chrome <br>DevTools, check for overlapping elements, and ensure onClick works properly.</p>
+                        <div class="border-dashed border-b-2 border-slate-200">
+                            <div class="p-2 bg-white h-18 text-left rounded-lg mb-4">
+                                <p class="truncate">Debug using Chrome <br>DevTools, check for overlapping elements, and ensure onClick works properly.</p>
+                            </div>
                         </div>
                         <div class="flex flex-row justify-between items-center">
                             <div class="flex flex-col gap-1 text-left">
@@ -157,8 +167,10 @@
                             <h4 class="font-semibold">GlassDoor</h4>
                         </div>
                         <h1 id="taskF" class="font-bold text-xl">Improve Job searching</h1>
-                        <div class="p-2 bg-white h-18 text-left rounded-lg ">
-                            <p class="truncate">Debug using Chrome <br>DevTools, check for overlapping elements, and ensure onClick works properly.</p>
+                        <div class="border-dashed border-b-2 border-slate-200">
+                            <div class="p-2 bg-white h-18 text-left rounded-lg mb-4">
+                                <p class="truncate">Debug using Chrome <br>DevTools, check for overlapping elements, and ensure onClick works properly.</p>
+                            </div>
                         </div>
                         <div class="flex flex-row justify-between items-center gap-2">
                             <div class="flex flex-col gap-1 text-left">
