Color issue fixed

--- a/Temporary.html
+++ b/Temporary.html
@@ -11,3 +11,13 @@
 
 
 <h1 class="text-3xl">Dev<span class="font-bold">Board</span></h1>
+
+<section class="flex flex-col justify-center items-center px-12 py-8">
+    <nav class="flex flex-row justify-b items-center">
+        <div class="flex flex-row justify-start items-center gap-2">
+            <img src="./assets/logo.png" alt="">
+            <h1 class="text-3xl">Dev<span class="font-bold">Board</span></h1>
+        </div>
+        <button class="btn bg-blue-600">Back to Desk</button>
+    </nav>
+</section>
