--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
     <script src="./Scripts/main.js"></script>
     <script src="./Scripts/Delete.js"></script>
     <script src="./Scripts/Time.js"></script>
+    <script src="./Scripts/ColorPicker.js"></script>
     <script>
         document.getElementById("QandA").addEventListener('click', function(event){
         event.preventDefault();
