--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <img src="./assets/checkbox.png" alt="Ticked image">
                     <h1 id="Comp" class="text-3xl font-bold">23</h1>
                 </div>
-                <div id="swiTch" class="p-3 bg-slate-100 rounded-full">
+                <div id="swiTch" class="p-3 bg-slate-100 rounded-full cursor-pointer">
                     <img src="./assets/theme-btn.png" alt="Theme button">
                 </div>
             </section>
